--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+.songs{
+  color: white;
+  background-color: rgb(243, 45, 5);
+  width: fit-content;
+  padding: 0.5rem;
+  
+}
